--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,13 +2,13 @@ spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 server.port=8086
 
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 #options: none valid update create create-drop
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 
-spring.datasource.initialize=false
+spring.datasource.initialize=true
 #options never or always
-spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=always
 
 
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
