--- a/src/main/resources/error-messages.properties
+++ b/src/main/resources/error-messages.properties
@@ -1,9 +1,8 @@
-Size.socioDTO.username=username should be min 2 characters
-NotNull.socioDTO.usewrname=username is mandetory!
+Size.clientDTO.username=username should be min 2 characters
+NotNull.clientDTO.usewrname=username is mandetory!
 
-Size.socioDTO.email=email should be max 20 characters
-NotNull.socioDTO.email=email is mandetory!
-Email.socioDTO.email=this is not a correct email!
+Size.clientDTO.email=email should be max 20 characters
+NotNull.clientDTO.email=email is mandetory!
+Email.clientDTO.email=this is not a correct email!
 
-
-
+#etc.
