--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,8 +15,8 @@ spring.datasource.initialization-mode=always
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = true
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
