--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Backend validation messages
 spring.messages.basename=error-messages
 spring.messages.cache-seconds=-1
-#spring.messages.encoding=UTF-8
+spring.messages.encoding=UTF-8
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.main.allow-bean-definition-overriding=true
