--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,19 @@ spring.profiles.active=test
 
 spring.application.name=hotelbookingbackend
 app.message=spring boot micro services ${spring.application.name}
+
+
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+
+## File Storage Path
+file.upload-path=/Users/artsgard/Documents/upload-files-test
+
+server.port=8082
+
